--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="./images/__image.svg" alt="Плацкарт с направлением" class="lead__image">
+            <img src="./images/__image.jpg" alt="Плацкарт с направлением" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
@@ -41,18 +41,18 @@
             </ul>
         </section>
         <section class="photo-grid">
-            <img src="./images/__item1.svg" alt="Вид из окна поезда" class="photo-grid__item">
-            <img src="./images/__item2.svg" alt="Вид из засолета на горы" class="photo-grid__item">
-            <img src="./images/__item3.svg" alt="Шакал" class="photo-grid__item">
-            <img src="./images/__item4.svg" alt="Лес" class="photo-grid__item">
-            <img src="./images/__item5.svg" alt="Озеро и колесо" class="photo-grid__item">
-            <img src="./images/__item6.svg" alt="Берег и горы" class="photo-grid__item">
-            <img src="./images/__item7.svg" alt="горы" class="photo-grid__item">
-            <img src="./images/__item8.svg" alt="Знак пешеходный переход" class="photo-grid__item">
-            <img src="./images/__item9.svg" alt="Скалы" class="photo-grid__item">
-            <img src="./images/__item10.svg" alt="поле и горы" class="photo-grid__item">
-            <img src="./images/__item11.svg" alt="Скалы на берегу" class="photo-grid__item">
-            <img src="./images/__item12.svg" alt="туман в горах" class="photo-grid__item">
+            <img src="./images/__item1.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+            <img src="./images/__item2.jpg" alt="Вид из засолета на горы" class="photo-grid__item">
+            <img src="./images/__item3.jpg" alt="Шакал" class="photo-grid__item">
+            <img src="./images/__item4.jpg" alt="Лес" class="photo-grid__item">
+            <img src="./images/__item5.jpg" alt="Озеро и колесо" class="photo-grid__item">
+            <img src="./images/__item6.jpg" alt="Берег и горы" class="photo-grid__item">
+            <img src="./images/__item7.jpg" alt="горы" class="photo-grid__item">
+            <img src="./images/__item8.jpg" alt="Знак пешеходный переход" class="photo-grid__item">
+            <img src="./images/__item9.jpg" alt="Скалы" class="photo-grid__item">
+            <img src="./images/__item10.jpg" alt="поле и горы" class="photo-grid__item">
+            <img src="./images/__item11.jpg" alt="Скалы на берегу" class="photo-grid__item">
+            <img src="./images/__item12.jpg" alt="туман в горах" class="photo-grid__item">
         </section>
         <section class="places">
             <div class="place">
@@ -62,7 +62,7 @@
                     <a href="http://park-kosa.ru" class="place__link">
                         park-kosa.ru</a>
                 </div>
-                <img src="./images/__image1.svg" alt="Скалы в море" class="place__image">
+                <img src="./images/__image1.jpg" alt="Скалы в море" class="place__image">
                 <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом.
                     Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым
                     морем.</p>
@@ -80,7 +80,7 @@
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">
                         National Geographic</a>
                 </div>
-                <img src="./images/__image2.svg" alt="горы" class="place__image">
+                <img src="./images/__image2.jpg" alt="горы" class="place__image">
                 <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                     которой на юг —
                     тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -98,7 +98,7 @@
                     <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">
                         YouTube</a>
                 </div>
-                <img src="./images/__image3.svg" alt="Лес" class="place__image">
+                <img src="./images/__image3.jpg" alt="Лес" class="place__image">
                 <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                     В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные
                     реки и озёра. А если вы откроете
@@ -116,7 +116,7 @@
                     <a href="https://vk.com/baikalmile" class="place__link">
                         https://vk.com/baikalmile</a>
                 </div>
-                <img src="./images/__image4.svg" alt="Лед на озере байкал" class="place__image">
+                <img src="./images/__image4.jpg" alt="Лед на озере байкал" class="place__image">
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                     в мире. Многие также знают, что это самый большой источник пресной воды и одно
                     из красивейших мест в России.</p>
@@ -132,7 +132,7 @@
                     <a href="http://vodlozero.ru" class="place__link">
                         http://vodlozero.ru/</a>
                 </div>
-                <img src="./images/__image5.svg" alt="Река" class="place__image">
+                <img src="./images/__image5.jpg" alt="Река" class="place__image">
                 <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
                     лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
                     национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше
