--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-            <h1 class="intro__title">Чего мы там не видели?</h1>
+            <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
                 вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
@@ -142,24 +142,23 @@
             </div>
         </section>
         <section class="cover">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-                <div class="cover__main">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</p>
-                </div>
-            </a>
+            <div class="cover__background"></div>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                электричках.</p>
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link"></a>
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__links">
+        <nav class="footer__links">
             <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
             <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
             <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
             <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
             <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-        </div>
+        </nav>
         <p class="footer__copyright">© 2020. Фураев Алексей</p>
     </footer>
 </body>
+
 </html>
